# legacy-gaggit

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  boiler.c  boiler.h  boiler_internal.h  gaggit.c  task_boiler.c  task_boiler.h  task_common.c  task_common.h  task_log.c  task_log.h  task_pid.c  task_pid.h
